--- a/views/signup.erb
+++ b/views/signup.erb
@@ -34,6 +34,11 @@
     <label>Gender</label>
     <input required type="text" name="gender" placeholder="Gender">
   </div>
+
+ <div class="field">
+    <label>Profile Pic Link</label>
+    <input required type="text" name="pic" placeholder="link">
+  </div>
 </div>
 
   <button class="ui button" type="submit">Sign Up</button>
