--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,11 @@
 <h1> Hello World </h1>
+<div class="ui right aligned segment">
+
+        <a href="/login" class="ui primary button">
+          Login
+        </a>
+        <a href="/signup" class="ui primary button">
+          Sign Up
+        </a>
+
+    </div>
