--- a/views/login.erb
+++ b/views/login.erb
@@ -1,3 +1,14 @@
+<div class="ui right aligned segment">
+
+        <a href="/login" class="ui primary button">
+          Login
+        </a>
+        <a href="/signup" class="ui primary button">
+          Sign Up
+        </a>
+
+    </div>
+
 <form class="ui form" method="POST" action="/users/login">
   <h2>LOGIN</h2>
   <div class="two fields">
