--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,3 +1,15 @@
+<div class="ui right aligned segment">
+
+        <a href="/login" class="ui primary button">
+          Login
+        </a>
+        <a href="/signup" class="ui primary button">
+          Sign Up
+        </a>
+     
+    </div>
+
+
 <form class="ui form" method="POST" action="/users/signup">
   <h2>SIGN UP</h2>
   <div class="two fields">
