--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -3,7 +3,7 @@
     <a href="/logout" class="ui primary button">
         Logout
     </a>
-    <a href="/logout/delete" class="ui primary button">
+    <a href="/logout/delete/<%= @current_user.id %>" class="ui primary button">
         Delete Account
     </a>
  </div>
@@ -33,6 +33,24 @@
 </div>
 
 </div>
+
+<div class="ui three column grid">
+<% for each_user in @user do%>
+  <div class="column">
+    <div class="ui fluid card">
+      <div class="image">
+        <img src="<%= each_user.pic %>">
+      </div>
+      <div class="content">
+        <a class="header"><%= each_user.firstName %> <%= each_user.lastName %></a>
+      </div>
+    </div>
+  </div>
+  <%end%>
+  </div>
+
+
+
 </section>
 
 
