--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,17 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 </head>
 <body>
 
 
     <div class="ui container">
       <h1>Trade Blast</h1>
-      <br>
 
       <br>
-      <br>
-
       <%= yield %>
 
     </div>
