--- a/public/main.css
+++ b/public/main.css
@@ -31,3 +31,27 @@ body{
 header {
   background: rgba(255,255,255,0.5);
 }
+
+h1{
+font-family: 'Righteous', cursive;
+font-size: 90px;
+}
+
+h2{
+font-family: 'Righteous', cursive;
+font-size: 60px;
+text-align: center;
+}
+
+h3{
+font-family: 'Righteous', cursive;
+font-size: 20px;
+}
+
+
+/*
+.user_img{
+  width: 120px;
+  height: 180px;
+
+} */
