--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -34,7 +34,7 @@
 
 </div>
 
-
+<h3 class="color"> Active Users </h3>
 <div class="ui four column grid">
 <% for each_user in @user_all do%>
   <div class="column">
