--- a/public/main.css
+++ b/public/main.css
@@ -35,17 +35,21 @@ header {
 h1{
 font-family: 'Righteous', cursive;
 font-size: 90px;
+color: #4183c4;
+
 }
 
 h2{
 font-family: 'Righteous', cursive;
 font-size: 60px;
 text-align: center;
+color: #4183c4;
 }
 
 h3{
 font-family: 'Righteous', cursive;
 font-size: 20px;
+color: #4183c4;
 }
 
 .color{
