--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -16,7 +16,7 @@
       <img src="<%= @current_user.pic%> ">
     </a>
     <div class="content">
-      <a class="header"><%= @current_user.firstName%> <%= @current_user.lastName%> </a>
+      <h3><a class="header"><%= @current_user.firstName%> <%= @current_user.lastName%> </a></h3>
       <div class="description">
         <p>I was born in the world of birds and being that finance was the main educational domain in their universities, I gained my BhD in finance. I focused on analyzing trends and news to predict market movement, which is similar to how I fly. Never stagnent, its either up or down!</p>
         <p>It was once sad that many birds can fly but only one can dive both up and down.</p>
@@ -26,7 +26,7 @@
 </div>
 <div class= "ui segment">
 <div class= "content">
-<a class="header">Mission</a>
+<h3><a class="header">Mission</a></h3>
 <div class="description">
         <p>This blog was created for one purpose only and that is to share trade ideas! Everyone has their area of expertise but different amount of experience in the art of trading so by collaborating possible trading ideas and the logic behind it, we may learn from one another. Our mission is to stay ahead, profit and have fun! Yes, besides the headaches and stressed out zombies, we still party!</p>
     </div>
@@ -93,7 +93,7 @@
 <div class="ui  form" >
     <form method="POST" action="/feed">
         <div class="field">
-            <label>Create Post</label>
+            <h3><label>Create Post</label></h3>
             <input  style="height:20vh; width:80%;" type="textarea" name="content"></input>
         </div>
         <button class="positive ui button" type="submit">Post</button>
