added profile button and info

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -3,8 +3,8 @@
     <a href="/logout" class="ui primary button">
         Logout
     </a>
-    <a href="/logout/delete/<%= @current_user.id %>" class="ui primary button">
-        Delete Account
+    <a href="/profile" class="ui primary button">
+        Profile
     </a>
  </div>
 
