--- a/public/main.css
+++ b/public/main.css
@@ -2,8 +2,8 @@ h1 {
   text-align: center;
   font-family: sans-serif;
 }
-.posLeft{
-  text-align: right;
+.centerCont{
+  text-align: center;
 
 }
 
