--- a/views/partials/footer.erb
+++ b/views/partials/footer.erb
@@ -1,80 +1,21 @@
+
+
+
 <div class="ui container">
 <div class="footer">
     <div class="ui segment">
-        Travel Match 2015. All Righ.footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #efefef;
-  text-align: center;
-}.footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #efefef;
-  text-align: center;
-}.footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #efefef;
-  text-align: center;
-}.footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #efefef;
-  text-align: center;
-}.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
-  text-align: center;
-}.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
-  text-align: center;
-}.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
-  text-align: center;
-}
-
-
-
-
-
-
-
-
-
-bhxbhsxywbxwyuwd292e
-
-hhhh
-
-ts Reserved
+        Stock Blast Inc 2018
+        <i class="facebook square icon"></i>
+        <i class="linkedin icon"></i>
+        <i class="slack icon"></i>
     </div>
 </div>
+
 </div>
+
+
+
+
 
 
 
