added gif and readme

--- a/views/login.erb
+++ b/views/login.erb
@@ -1,3 +1,4 @@
+
 <div class="ui right aligned segment">
 
         <a href="/login" class="ui primary button">
@@ -8,6 +9,11 @@
         </a>
 
     </div>
+
+<div>
+<img src="https://d33wjekvz3zs1a.cloudfront.net/wp-content/uploads/2018/02/hauling_arrow_up_graph_anim_300_clr_13071.gif">
+</div>
+
 
 <form class="ui form" method="POST" action="/users/login">
   <h3>LOGIN</h3>
