--- a/views/login.erb
+++ b/views/login.erb
@@ -10,7 +10,7 @@
 
     </div>
 
-<div>
+<div class="middle">
 <img src="https://d33wjekvz3zs1a.cloudfront.net/wp-content/uploads/2018/02/hauling_arrow_up_graph_anim_300_clr_13071.gif">
 </div>
 
