--- a/public/main.css
+++ b/public/main.css
@@ -62,9 +62,6 @@ color: #4183c4;
    text-align: center;
 }
 
-/*
-.user_img{
-  width: 120px;
-  height: 180px;
-
-} */
+.middle{
+  text-align: center;
+}
