--- a/views/login.erb
+++ b/views/login.erb
@@ -29,5 +29,5 @@
     </div>
   </div>
 
-  <button class="ui button" type="submit">Login</button>
+  <button class="ui centered button" type="submit">Login</button>
 </form>
