--- a/public/main.css
+++ b/public/main.css
@@ -22,6 +22,7 @@ img {
 body{
   background-image: url("/images/background2.png");
   background-size: cover;
+  background-attachment: fixed;
 
 }
 
