--- a/public/main.css
+++ b/public/main.css
@@ -23,6 +23,7 @@ body{
   background-image: url("/images/background2.png");
   background-size: cover;
   background-attachment: fixed;
+  background-repeat: no-repeat;
 
 }
 
